--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,12 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="theme-color" content="#4caf50" />
+    <meta name="description" content="健康饮食管理应用" />
+    <title>健康饮食</title>
   </head>
   <body>
     <div id="root"></div>
